geterg mining graphic alignment fix

--- a/styles/geterg.scss
+++ b/styles/geterg.scss
@@ -54,7 +54,7 @@
   position: absolute;
   width: 254px;
   height: 1054px;
-  top: 1854px;
+  top: 1200px;
   right: 0px;
   background: no-repeat url("/assets/geterg/frame-3-light.png");
 }
@@ -63,7 +63,7 @@
   position: absolute;
   width: 254px;
   height: 1054px;
-  top: 1854px;
+  top: 1200px;
   right: 0px;
   background: no-repeat url("/assets/geterg/frame-3.png");
 }
@@ -160,6 +160,12 @@
     
   }
 
+  .geterg-frame-3 {
+    transform: scale(0.8);
+    transform-origin: top right;
+    top: 1750px;
+  }
+
 }
 
 // 	max-width: 768px;
@@ -179,6 +185,7 @@
   .geterg-frame-3 {
     transform: scale(0.5);
     transform-origin: top right;
+    top: 1590px;
   }
 
   .geterg-frame-4 {
@@ -227,6 +234,12 @@
   .geterg-blur-1 {
     transform: scale(0.45);
     transform-origin: top left;
+  }
+
+  .geterg-frame-3 {
+    transform: scale(0.4);
+    transform-origin: top right;
+    top: 2150px;
   }
 }
 
